gradle build file update