@@ -28,6 +28,14 @@ repositories {
 }
 
 application {
+
+    applicationDefaultJvmArgs = [
+        '--add-exports=javafx.graphics/com.sun.javafx.cursor=ALL-UNNAMED',
+        '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+        '--add-exports=javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED',
+        '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
+
     if (System.getProperty("os.name").toLowerCase().contains("mac")) {
         applicationDefaultJvmArgs = ['-XstartOnFirstThread'] // this is when using a Mac as a development machine which requires the AppKit main UI thread to be used for GUI applications
     }
@@ -35,11 +43,17 @@ application {
 
 run {
     workingDir = projectDir
+    jvmArgs = [
+        '--add-exports=javafx.graphics/com.sun.javafx.cursor=ALL-UNNAMED',
+        '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+        '--add-exports=javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED',
+        '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
 }
 
 javafx {
     version = "20"
-    modules = [ 'javafx.controls' , 'javafx.fxml' ]
+    modules = [ 'javafx.controls' , 'javafx.fxml' , "javafx.graphics" ]
 }
 
 dependencies {
